[package]
name = "piston2d-touch_visualizer"
version = "0.10.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["touch", "visualizer", "piston"]
description = "A library for visualizing input touches with Piston-Graphics"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/touch_visualizer.git"
homepage = "https://github.com/PistonDevelopers/touch_visualizer"

[lib]
name = "touch_visualizer"
path = "src/lib.rs"

[dependencies]
piston2d-graphics = "0.26.0"
pistoncore-input = "0.20.0"

[dev-dependencies]
piston = "0.36.0"
pistoncore-sdl2_window = "0.49.1"
piston2d-opengl_graphics = "0.52.0"
piston2d-graphics = "0.26.0"
